--- a/ex014/estilos.css
+++ b/ex014/estilos.css
@@ -12,6 +12,7 @@ header{
     color: rgb(255, 255, 255);
     padding: 10px;
     text-align: center;
+    margin-top: 20px;
     
 
 }
@@ -20,6 +21,7 @@ section{
     border-radius: 50px;
     padding: 15px;
     margin: auto;
+    margin-top: 40px;
     width: 500px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.46);
 }
