--- a/ex016/estilos.css
+++ b/ex016/estilos.css
@@ -4,7 +4,7 @@
     padding: 0;
     font-weight: bold;
 }
-body{ background-color: rgb(20, 20, 51);
+body{ background-color: rgb(11, 11, 26);
     text-transform: capitalize;
   
 
@@ -25,6 +25,7 @@ section{
     margin-top: 40px;
     width: 500px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.46);
+    width: auto;
 }
 
 footer{ 
