--- a/ex016/estilos.css
+++ b/ex016/estilos.css
@@ -20,6 +20,7 @@ header{
 section{
     background-color: aliceblue;
     border-radius: 50px;
+    border: solid 2px rgb(65, 62, 62);
     padding: 15px;
     margin: auto;
     margin-top: 40px;
