--- a/ex017/estilos.css
+++ b/ex017/estilos.css
@@ -4,7 +4,7 @@
     padding: 0;
     font-weight: bold;
 }
-body{ background-color: rgb(20, 20, 51);
+body{ background-color:rgb(110, 110, 215);
     text-transform: capitalize;
   
 
@@ -20,10 +20,12 @@ header{
 section{
     background-color: aliceblue;
     border-radius: 50px;
+    border: solid 2px black;
     padding: 15px;
     margin: auto;
     margin-top: 40px;
     width: 500px;
+    width: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.46);
 }
 
